# BLT-SafeCloak

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  wrangler.toml
.github/workflows/: ci.yml  deploy-worker.yml  test.yml
public/: consent.html  in-call.html  index.html  notes.html  sw.js  video-chat.html
public/css/: main.css  theme.css
public/js/: consent.js  crypto.js  in-call.js  notes.js  theme.js  transcription.js  ui.js  video-lobby.js  video-preview.js  video.js  voice-changer.js
src/: __init__.py  main.py
src/components/smart-camera/: SmartCameraModule.jsx  index.js
src/libs/: __init__.py  utils.py
src/pages/: consent.html  in-call.html  index.html  notes.html  video-chat.html  video-room.html
tests/: conftest.py  test_main.py  test_main_api.py  test_notes.py  test_peer_mesh.py  test_public_rooms_api.py  test_signaling.py  test_three_client_chat.py  test_utils.py  test_utils_extended.py  test_video_chat.py  video.escapeHtml.test.js
